# kvazaar

./: .gitignore  .gitlab-ci.yml  .travis-install.bash  .travis-install.sh  .travis-script.sh  .travis.yml  CMakeLists.txt  COPYING  CREDITS  Dockerfile  LICENSE.EXT.x264asm  LICENSE.greatest  Makefile.am  README.md  SConstruct  appveyor.yml  autogen.sh  configure.ac  docs.doxy
.github/workflows/: kvazaar.yml  pull_request.yml
doc/: genmanpage.sh  kvazaar.1
examples/: README.md  fast_coeff_table.txt  roi.txt
m4/: ax_pthread.m4
rdcost-weight-tool/: README-rdcost-thingy.txt  README.txt  build.sh  extract_rdcosts.py  filter_rdcosts.c  rdcost_do_avg.py  run_filter.py
src/: Makefile  Makefile-old  Makefile.am  SConscript  _encoderstatebitstream.c  _encoderstatectorsdtors.c  _encoderstategeometry.c  bitstream.c  bitstream.h  cabac.c  cabac.h  cfg.c  cfg.h  checkpoint.c  checkpoint.h  cli.c  cli.h  config.c  config.h  constraint.c  constraint.h  context.c  context.h  cu.c  cu.h  debug.c  debug.h  encmain.c  encode_coding_tree.c  encode_coding_tree.h  encoder.c  encoder.h  encoder_state-bitstream.c  encoder_state-bitstream.h  encoder_state-ctors_dtors.c  encoder_state-ctors_dtors.h  encoder_state-geometry.c  encoder_state-geometry.h  encoderstate.c  encoderstate.h  (+76 more)
src/extras/: crypto.cpp  crypto.h  getopt.c  getopt.h  libmd5.c  libmd5.h
src/inline-optimizations/: picture-sse2.c
src/scaler/: FastSSIM.m  README.txt  SSIM.m  SSIM_psnr_test.m  SSIM_test.m  SSIM_test_2.m  SSIM_test_3.m  downScaler.c  main.c  scaleTest.m  scaleTest2.m  scaleTest3.m  scaleTest4.m  scaleTest420.m  scaler-avx2.c  scaler-avx2.h  scaler-util.c  scaler-util.h  scaler.c  scaler.h
src/strategies/: missing-intel-intrinsics.h  nal-generic.c  nal.c  nal.h  picture-altivec.c  picture-generic.c  picture-sse2.c  picture-sse41.c  picture.c  picture.h  strategies-common.h  strategies-dct.c  strategies-dct.h  strategies-encode.c  strategies-encode.h  strategies-intra.c  strategies-intra.h  strategies-ipol.c  strategies-ipol.h  strategies-nal.c  strategies-nal.h  strategies-partial-butterfly.c  strategies-partial-butterfly.h  strategies-picture.c  strategies-picture.h  strategies-quant.c  strategies-quant.h  strategies-resample.c  strategies-resample.h  strategies-sao.c  strategies-sao.h
src/strategies/altivec/: picture-altivec.c  picture-altivec.h
src/strategies/avx2/: avx2_common_functions.h  dct-avx2.c  dct-avx2.h  encode_coding_tree-avx2.c  encode_coding_tree-avx2.h  intra-avx2.c  intra-avx2.h  ipol-avx2.c  ipol-avx2.h  partial-butterfly-avx2.c  partial-butterfly-avx2.h  picture-avx2.c  picture-avx2.h  quant-avx2.c  quant-avx2.h  reg_sad_pow2_widths-avx2.h  resample-avx2.c  resample-avx2.h  sao-avx2.c  sao-avx2.h
src/strategies/generic/: dct-generic.c  dct-generic.h  encode_coding_tree-generic.c  encode_coding_tree-generic.h  intra-generic.c  intra-generic.h  ipol-generic.c  ipol-generic.h  nal-generic.c  nal-generic.h  partial-butterfly-generic.c  partial-butterfly-generic.h  picture-generic.c  picture-generic.h  quant-generic.c  quant-generic.h  resample-generic.c  resample-generic.h  sao-generic.c  sao-generic.h  sao_band_ddistortion.h  sao_shared_generics.h
src/strategies/nal/: nal-generic.c
src/strategies/picture/: picture-altivec.c  picture-avx.c  picture-generic.c  picture-sse2.c  picture-sse41.c
src/strategies/sse2/: picture-sse2.c  picture-sse2.h
src/strategies/sse41/: picture-sse41.c  picture-sse41.h  reg_sad_pow2_widths-sse41.h
src/strategies/x86_asm/: picture-x86-asm-sad.asm  picture-x86-asm-sad.h  picture-x86-asm-satd.asm  picture-x86-asm-satd.h  picture-x86-asm.c  picture-x86-asm.h
src/strategies/x86_avx/: picture-avx.c  picture-avx.h  picture_x86.asm  picture_x86.h
src/threadwrapper/include/: pthread.h
src/threadwrapper/src/: pthread.cpp
src/x64/: test64.asm  test64.h
src/x86/: cpu.asm  cpu.h  picture_x86.asm  picture_x86.h  test.asm  test.h  x86inc.asm
tests/: CMakeLists.txt  Makefile.am  bipred_generic_tests.c  coeff_sum_tests.c  dct_tests.c  inter_recon_bipred_tests.c  intra_sad_tests.c  main.c  mv_cand_tests.c  picture_list_tests.c  picture_list_tests.h  sad_tests.c  sad_tests.cpp  sad_tests.h  satd_tests.c  satd_tests.h  speed_tests.c  test_chroma_subsampling.sh  test_external_symbols.bash  test_external_symbols.sh  test_gop.bash  test_gop.sh  test_interlace.bash  test_interlace.sh  test_intra.bash  test_intra.sh  test_invalid_input.bash  test_invalid_input.sh  test_mv_constraint.bash  test_mv_constraint.sh  test_owf_wpp_tiles.bash  test_owf_wpp_tiles.sh  test_pu_depth_constraints.sh  test_rate_control.bash  test_rate_control.sh  test_scalability.sh  test_scalability_SAO_deblock.sh  test_scalability_SNR.sh  test_scalability_errors.sh  test_scalability_gop.sh  (+19 more)
tools/: appveyor-install.sh  generate_ref_pixel_tables.py  generate_tables.c  genmanpage.sh  plot-threadqueue-log.py  update_readme.sh  version.sh
yasm/: vsyasm.props
